tests/invalid/type_arity.err_exp
type_arity.m:013: In the first argument of function symbol `t1_3f' of the type
type_arity.m:013:   `type_arity.t1'/0:
type_arity.m:013:   error: undefined type `t2'/1.
type_arity.m:013:   (There is a type named `t2' with arity 2.)
